@@ -1,3 +1,6 @@
+Sun Dec 19 13:46:52 CET 2010
+	Added option to specify size of stacks for threads created by MHD. -CG
+
 Tue Nov 23 09:41:00 CET 2010
 	Releasing libmicrohttpd 0.9.3. -CG
 
